# ChangeLog for app-backup/ccollect
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/ccollect/ChangeLog,v 1.29 2009/10/12 17:19:30 halcy0n Exp $

  12 Oct 2009; Mark Loeser <halcy0n@gentoo.org> ccollect-0.5.1.ebuild,
  ccollect-0.6.ebuild:
  QA fixes; unquoted variables

*ccollect-0.7.1 (15 Mar 2009)

  15 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> +ccollect-0.7.1.ebuild:
  Version bump.

*ccollect-0.7.0-r1 (03 Jun 2008)

  03 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> -ccollect-0.7.0.ebuild,
  +ccollect-0.7.0-r1.ebuild:
  Updated upgrade warnings. Installing tools directly to /usr/bin (as
  recommended by upstream).

  03 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> ccollect-0.7.0.ebuild:
  Fixed dependencies for doc/manpage generation. Fixed doc/manpage
  generation and installation.

*ccollect-0.7.0 (03 Jun 2008)

  03 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> -ccollect-0.5.2.ebuild,
  +ccollect-0.7.0.ebuild:
  Version bump.

*ccollect-0.6 (17 Aug 2007)

  17 Aug 2007; René Nussbaumer <killerfox@gentoo.org> +ccollect-0.6.ebuild:
  Version bump by upstream

  03 Feb 2007; René Nussbaumer <killerfox@gentoo.org>
  -ccollect-0.4.2.ebuild:
  Cleaned up old versions

  03 Feb 2007; René Nussbaumer <killerfox@gentoo.org>
  ccollect-0.5.1.ebuild:
  Stable on amd64.

*ccollect-0.5.2 (03 Feb 2007)

  03 Feb 2007; René Nussbaumer <killerfox@gentoo.org>
  +ccollect-0.5.2.ebuild:
  Version bump from upstream

  17 Nov 2006; René Nussbaumer <killerfox@gentoo.org>
  -ccollect-0.3.3.ebuild, -ccollect-0.4.ebuild:
  Clean up old versions

  16 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  ccollect-0.5.1.ebuild:
  stable x86, bug #155359

  16 Nov 2006; René Nussbaumer <killerfox@gentoo.org>
  ccollect-0.5.1.ebuild:
  Stable on hppa, ppc. See bug #155359.

  16 Nov 2006; René Nussbaumer <killerfox@gentoo.org>
  ccollect-0.3.3.ebuild, ccollect-0.4.ebuild, ccollect-0.4.2.ebuild,