@@ -3,6 +3,6 @@
 <pkgmetadata>
 	<herd>no-herd</herd>
 	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
+		<email>dev-zero@gentoo.org</email>
 	</maintainer>
 </pkgmetadata>
